junit-dep-4.10.jar replaces junit-4.8.2.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@180230 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/componentsLoading/.classpath
+++ b/Benchmark/componentsLoading/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="INTROOT/lib/benchmarkUtil.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
