--- a/LGPL/CommonSoftware/ACSLaser/laser-source/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/laser-source/.classpath
@@ -37,7 +37,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/endorsed/xercesImpl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjms.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsncErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/AlarmSourceSchemaBindings.jar"/>
