--- a/LGPL/CommonSoftware/XmlIdl/.classpath
+++ b/LGPL/CommonSoftware/XmlIdl/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="src_generated"/>
 	<classpathentry kind="var" path="ACSROOT/lib/endorsed/xercesImpl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/xmljbind.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/avalon-framework.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/logkit.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/openorb13Debug.jar" sourcepath="ACSROOT/lib/openorb13Debug.jar"/>
