--- a/LGPL/CommonSoftware/acsGUIs/acssampGUI/.classpath
+++ b/LGPL/CommonSoftware/acsGUIs/acssampGUI/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jfree-jcommon-1.0.15.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jfreechart-1.0.12.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/NotifyMonitoringExt.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsncErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jchart2d-3.1.0.jar"/>
