--- a/LGPL/CommonSoftware/jcontexmpl/.classpath
+++ b/LGPL/CommonSoftware/jcontexmpl/.classpath
@@ -33,7 +33,7 @@
 	<classpathentry kind="lib" path="lib/JContExmplErrTypeTest.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsexmplErrorComponent.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeOK.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeJavaNative.jar"/>
