--- a/LGPL/CommonSoftware/ACSLaser/acs-jms/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/acs-jms/.classpath
@@ -17,7 +17,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/selector-1.1.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsncErrType.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/JavaContainerError.jar"/>
 	<classpathentry kind="output" path="src"/>
