--- a/LGPL/CommonSoftware/acsContainerServices/.classpath
+++ b/LGPL/CommonSoftware/acsContainerServices/.classpath
@@ -21,7 +21,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/commons-jexl-1.1.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-library-1.3.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
