--- a/LGPL/CommonSoftware/xmljbind/.classpath
+++ b/LGPL/CommonSoftware/xmljbind/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/endorsed/xercesImpl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jakarta-oro-2.0.5.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jakarta-regexp-1.2.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.apache.ant_1.6.5/lib/ant.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
