--- a/LGPL/CommonSoftware/ACSLaser/alarmTests/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/alarmTests/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/laserclient.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmClients.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lasercore.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/junit.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maciErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
