Adding another eclipse project "ACS_eventGUI_jarplugin" to provide the RCP jars as symlinks to ACSROOT jars. This is not a real module and thus only in CVS as a tar ball. Ecliplse developers of the eventGUI module should unpack it, for example as a sibling module under 'CommonSoftware', so that project 'eventGUI' gets its classpath needs satisfied from the referenced 'ACS_eventGUI_jarplugin' module.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@180256 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/.classpath
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ACS_eventGUI_jarplugin"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/alma.acs.rcp.jars"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
