--- a/LGPL/CommonSoftware/eventGUI/.classpath
+++ b/LGPL/CommonSoftware/eventGUI/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ACS_eventGUI_jarplugin"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/alma.acs.rcp.jars"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
