--- a/LGPL/Tools/extjars/.classpath
+++ b/LGPL/Tools/extjars/.classpath
@@ -42,5 +42,6 @@
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-jexl-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-dep-4.10.jar"/>
+	<classpathentry kind="lib" path="lib/mockito-core-1.9.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
