Added objenesis-1.2.jar, which is needed for mockito tests, now that mockito-core-1.9.5.jar replaces the various mockito-all jars. (Still it's good that mockito core no longer duplicates hamcrest classes.) This objenesis-1.2.jar should replace SCHEDULING/Common/lib/objenesis-1.0.jar.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@180289 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/extjars/src/Makefile
+++ b/LGPL/Tools/extjars/src/Makefile
@@ -75,6 +75,7 @@ INSTALL_FILES = ../lib/activation.jar \
 	../lib/logkit.jar \
 	../lib/logkit.jar \
 	../lib/mockito-core-1.9.5.jar \
+	../lib/objenesis-1.2.jar \
 	../lib/openorb13Debug.jar \
 	../lib/prevayler-1.02.001.jar \
 	../lib/saxpath.jar \
