*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@180414 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsContainerServices/.classpath
+++ b/LGPL/CommonSoftware/acsContainerServices/.classpath
@@ -29,5 +29,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/xalan.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/commons-digester-2.1.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
+	<classpathentry kind="lib" path="ws/lib/acsErrTypeLifeCycle.jar"/>
 	<classpathentry kind="output" path="ws/object/eclipseOut"/>
 </classpath>
