--- a/LGPL/CommonSoftware/jcontexmpl/.classpath
+++ b/LGPL/CommonSoftware/jcontexmpl/.classpath
@@ -54,5 +54,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeAlarmSourceFactory.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
