--- a/LGPL/CommonSoftware/nctest/.classpath
+++ b/LGPL/CommonSoftware/nctest/.classpath
@@ -34,5 +34,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/junit-dep-4.10.jar" sourcepath="ACSROOT/lib/junit-dep-4.10.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsncErrType.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
 	<classpathentry kind="output" path="ws/object/eclipseOut"/>
 </classpath>
