Ported DemoTest from deprecated NC Consumer to the new NCSubscriber (for a change used with a separate receiver callback class)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@181069 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/demo/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/demo/.classpath
@@ -23,5 +23,11 @@
 	<classpathentry kind="var" path="ACSROOT/lib/AlarmSystem.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="lib" path="lib/demoComponents.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/AlarmSourceSchemaBindings.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsncErrType.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmService.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/AcsAlarmSystem.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
