--- a/LGPL/CommonSoftware/jcont/.classpath
+++ b/LGPL/CommonSoftware/jcont/.classpath
@@ -44,9 +44,11 @@
 	<classpathentry kind="var" path="ACSROOT/lib/ACSError.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCORBA.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeOK.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/acsAlarmClients.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/AcsContainerLogLTS.jar"/>
 	<classpathentry kind="lib" path="lib/jconttest_if.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jacsutil2.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-library-1.3.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
