*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@181785 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jlogEngine/.classpath
+++ b/LGPL/CommonSoftware/jlogEngine/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jacsutil2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
