*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@181885 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/.classpath
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/.classpath
@@ -47,5 +47,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcontnc.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsnc.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/systementities.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
