--- a/LGPL/CommonSoftware/eventGUI/.classpath
+++ b/LGPL/CommonSoftware/eventGUI/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ACS_eventGUI_jarplugin"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-scxml-0.9.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsErrTypeLifeCycle.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
