Checking in (some of the) files for a new TAT test
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@182236 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/test/Makefile
+++ b/Benchmark/corbaNotify/test/Makefile
@@ -82,7 +82,7 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         =
-SCRIPTS_L       =
+SCRIPTS_L       = corbaNotifyTATPrologue corbaNotifyTATEpilogue
 
 
 #
@@ -202,9 +202,13 @@ endif
 # TARGETS
 # -------
 all:	do_all
+	@mkdir -p tmp
 	@echo " . . . 'all' done" 
 
 clean : clean_all 
+	$(RM) *~
+	$(RM) tmp
+	$(RM) tatlogs
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
