Finished test as a regression test for JIRA:COMP-8357 Some TODOs comments we should get back to though, e.g. why it takes more than 15 seconds for the "clear-throttle-alarm" to be published by the alarm service.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@182460 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/containerTest/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/containerTest/test/Makefile
@@ -86,8 +86,8 @@ lllll_OBJECTS   =
 # Scripts (public and local)
 # ----------------------------
 # These scripts are shell scripts not Python scripts
-SCRIPTS         = managerTATPrologue managerTest
-SCRIPTS_L       =
+SCRIPTS         = 
+SCRIPTS_L       = containerTATPrologue runLogAlarmTest.sh
 
 #
 # TCL scripts (public and local)
@@ -139,8 +139,12 @@ USER_IDL =
 #
 # Jarfiles and their directories
 #
-JARFILES= containerTest
-containerTest_DIRS=alma
+JARFILES=containerTest
+containerTest_DIRS=alma/alarmContainerTest/client
+
+COMPONENTS_JARFILES = testComponentImpl
+testComponentImpl_DIRS = alma/alarmContainerTest/AlarmTestComponentImpl
+
 #
 # java sources in Jarfile on/off
 DEBUG = on
