Adding XML definition for publisher-subscriber component setups, so that a generic executer can create the respective containers and components.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@182897 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/src/Makefile
+++ b/Benchmark/corbaNotify/src/Makefile
@@ -145,13 +145,16 @@ XML_IDL=
 #
 COMPONENT_HELPERS=
 #
-# Java Entity Classes generation on/off
+# Java Entity Classes generation config file
 #
-XSDBIND=
+XSDBIND = pubSubConfigBind
+
 #
 # Schema Config files for the above
 #
 XSDBIND_INCLUDE=
+
+
 # man pages to be done
 # --------------------
 MANSECTIONS =
